--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,38 @@
-.teste{
-width: 200px;
-height: 200px;
-background-color: blueviolet;
-padding: 40px;
+/*Estilos Gerais*/
+
+body {
+    font-family: Arial, Helvetica, sans-serif;
 }
+
+/*Header*/
+
+.header {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    background: #fec63e;
+    padding: 15px 0px;
+}
+.header_menu {
+    text-align: right;
+}
+.header_menu ul li {
+    display: inline-block;
+    margin-left: 25px;
+    margin-top: 20px;
+}
+
+.header_menu a {
+    color: #000;
+    font-size: 14px;
+    font-weight: bold;
+    letter-spacing: 0.1em;
+    text-transform: uppercase;
+    line-height: 20px;
+    padding: 10px 0;
+}
+
+.header_menu ul li a:hover {
+    color: #fff;
+}
+/*Estilos Gerais*/
