--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,30 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
+p {
+    font-family: Georgia, "Times New Roman", Times, serif;
+    font-size: 14px;
+    line-height: 20px;
+}
+
+.btn {
+    border: 3px solid #fec63e;
+    padding: 10px 30px;
+    color: #fec63e;
+    font-size: 14px;
+    line-height: 20px;
+    text-transform: uppercase;
+    letter-spacing: 0.1em;
+    font-weight: bold;
+}
+
+
+.btn:hover{
+    color: #fff;
+    border: 3px solid #fff;
+
+}
+
 /*Header*/
 
 .header {
@@ -35,4 +59,49 @@ body {
 .header_menu ul li a:hover {
     color: #fff;
 }
-/*Estilos Gerais*/
+/*Introdução*/
+
+.introducao {
+    width: 100%;
+    background: url("../img/bg.jpg") no-repeat center;
+    background-size: cover;
+    margin-top: 96px;
+    text-align: center;
+    height: 380px;
+    padding-top: 80px;
+}
+
+.introducao h1 {
+    font-size: 48px;
+    color: #fff;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+.quote-externo {
+    max-width: 360px;
+    margin: 0 auto;
+    color: #fff;
+    margin-bottom:40px ;
+}
+
+.quote-externo p {
+    font-style: italic;
+}
+
+.quote-externo p:before,
+.quote-externo p:after {
+    content: "";
+    display: block;
+    width: 60px;
+    height: 3px;
+    background: #fff;
+    margin: 14px auto 10px auto;
+}
+
+.quote-externo cite {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    letter-spacing: 0.1em;
+}
