--- a/css/style.css
+++ b/css/style.css
@@ -21,11 +21,34 @@ p {
     font-weight: bold;
 }
 
-
-.btn:hover{
+.btn:hover {
     color: #fff;
     border: 3px solid #fff;
+}
 
+.btn.btn-preto:hover {
+    color: #000;
+    border-color: #000;
+}
+
+.subtitulo {
+    font-size: 24px;
+    line-height: 30px;
+    font-weight: bold;
+    letter-spacing: 0.1em;
+    color: #000;
+    text-transform: uppercase;
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+.subtitulo:after {
+    content: "";
+    display: block;
+    width: 60px;
+    height: 3px;
+    background: #000;
+    margin: 14px auto;
 }
 
 /*Header*/
@@ -36,6 +59,7 @@ p {
     width: 100%;
     background: #fec63e;
     padding: 15px 0px;
+    z-index: 10;
 }
 .header_menu {
     text-align: right;
@@ -82,7 +106,7 @@ p {
     max-width: 360px;
     margin: 0 auto;
     color: #fff;
-    margin-bottom:40px ;
+    margin-bottom: 40px;
 }
 
 .quote-externo p {
@@ -104,4 +128,53 @@ p {
     font-weight: bold;
     font-size: 14px;
     letter-spacing: 0.1em;
+}
+
+/* Produtos */
+
+.produtos {
+    padding: 60px 0;
+}
+
+.produtos_lista li {
+    background: #fec63e;
+    text-align: center;
+}
+
+.produtos_lista li h3 {
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 25px;
+    text-transform: uppercase;
+    letter-spacing: 0.1em;
+    margin-top: 20px;
+}
+
+.produtos_lista li h3:after {
+    content: "";
+    display: block;
+    width: 60px;
+    height: 3px;
+    background: #000;
+    margin: 2px auto;
+}
+
+.produtos_lista li p {
+    padding: 10px 20px 20px 20px;
+}
+
+.produtos_icone {
+    background: #000;
+    text-align: center;
+    padding: 20px;
+}
+
+.call {
+    padding-top: 40px;
+    text-align: center;
+    clear: both;
+}
+
+.call p{
+    padding-bottom: 25px;
 }
