--- a/css/produtos.css
+++ b/css/produtos.css
@@ -82,7 +82,7 @@
 	font-weight: bold;
 }
 
-.produto_info ul li:nth-child(even){
+.produto_info ul li:nth-child(even) {
 	background: #fec63e;
 	text-transform: uppercase;
 	font-size: 18px;
@@ -92,9 +92,111 @@
 	text-align: center;
 	margin-left: 2px;
 	height: 48px;
-
 }
 
-.produto_info ul li:nth-child(1),.produto_info ul li:nth-child(2){
+.produto_info ul li:nth-child(1),
+.produto_info ul li:nth-child(2) {
 	margin-bottom: 2px;
+}
+
+/* Orçamento */
+
+.orcamento {
+	background: #000;
+	width: 100%;
+	margin-top: 60px;
+	padding: 40px 0;
+}
+
+.orcamento h2 {
+	color: #fec63e;
+}
+
+.orcamento h2:after {
+	background: #fec63e;
+}
+
+.formulario_orcamento {
+	padding-right: 60px;
+}
+
+.formulario_orcamento label {
+	display: block;
+	color: #fff;
+	font-family: Georgia, "Times New Roman", Times, serif;
+	font-size: 18px;
+	line-height: 25px;
+	margin-bottom: 4px;
+}
+
+.formulario_orcamento input {
+	width: 100%;
+	border: 4px solid #fec63e;
+	display: block;
+	background: none;
+	color: #fff;
+	padding: 7px 10px;
+	outline: none;
+	font-size: 14px;
+	font-family: Georgia, "Times New Roman", Times, serif;
+	margin-bottom: 10px;
+}
+
+.formulario_orcamento textarea {
+	width: 100%;
+	height: 120px;
+	border: 4px solid #fec63e;
+	display: block;
+	background: none;
+	color: #fff;
+	padding: 7px 10px;
+	outline: none;
+	font-size: 14px;
+	font-family: Georgia, "Times New Roman", Times, serif;
+	margin-bottom: 20px;
+}
+
+.formulario_orcamento button {
+	background: none;
+	padding: 7px 40px;
+}
+
+.orcamento_dados {
+	color: #fff;
+}
+
+.orcamento_dados h3 {
+	font-size: 18px;
+	text-transform: uppercase;
+	color: #fec63e;
+	font-weight: bold;
+}
+
+.orcamento_dados span {
+	display: block;
+	font-size: 18px;
+	font-family: Georgia, "Times New Roman", Times, serif;
+	line-height: 30px;
+}
+
+.orcamento_dados .dados_email {
+	margin-bottom: 40px;
+}
+
+.orcamento_dados ul {
+	padding-right: 60px;
+}
+
+.orcamento_dados ul li {
+	font-family: Georgia, "Times New Roman", Times, serif;
+	font-size: 14px;
+	padding: 10px 15px;
+}
+
+.orcamento_dados ul li:nth-child(odd) {
+	background: #1d1d1d;
+}
+
+.orcamento_dados p {
+	margin: 8px 0px;
 }
