--- a/css/responsivo.css
+++ b/css/responsivo.css
@@ -1,5 +1,24 @@
 /* Estilo para Tablet */
 @media only screen and (min-width: 788px) and (max-width: 995px) {
+	/* Qualidade - home */
+	.qualidade:after {
+		right: 66px;
+	}
+
+	.qualidade_lista li {
+		padding: 0 10px;
+	}
+
+	/* Footer  - home */
+
+	.footer_redes ul li a {
+		padding: 6px;
+	}
+
+	.footer_redes ul li a img {
+		width: 26px;
+		height: 26px;
+	}
 }
 
 /* Estilo para SmartPhones */
@@ -36,7 +55,22 @@
 	/*Introdução*/
 	.introducao {
 		margin-top: 0px;
-		padding-top: 20px;
+		padding-top: 40px;
 		background: url("../img/bg-mobile.jpg") no-repeat center;
 	}
+
+	.introducao h1 {
+		font-size: 36px;
+	}
+
+	/* Produtos - home */
+	.call {
+		padding-top: 10px;
+	}
+
+	/* Qualidade - home */
+	.qualidade:after {
+		display: none;
+	}
+
 }
