Ajustando pagina de sobre  pra responsivo

--- a/css/responsivo.css
+++ b/css/responsivo.css
@@ -52,6 +52,11 @@
 		border: 4px solid #fff;
 	}
 
+	.header_menu a.menu_ativo {
+		color: #fff;
+		border-color: #fff;
+	}
+
 	/*Introdução*/
 	.introducao {
 		margin-top: 0px;
@@ -61,6 +66,12 @@
 
 	.introducao h1 {
 		font-size: 36px;
+	}
+
+	/* Introdução interna */
+
+	.introducao-interna {
+		margin-top: 0px;
 	}
 
 	/* Produtos - home */
@@ -73,4 +84,16 @@
 		display: none;
 	}
 
+
+	/* Sobre */
+	.missao_sobre p {
+		font-size: 14px;
+		line-height: 20px;
+		padding-right: 0px;
+	}
+
+	.missao_sobre p ul li{
+		font-size: 14px;
+		line-height: 25px;
+	}
 }
