--- a/css/responsivo.css
+++ b/css/responsivo.css
@@ -19,6 +19,29 @@
 		width: 26px;
 		height: 26px;
 	}
+
+	/* Produtos */
+
+	.produtos_item h2 {
+		top: -150px;
+		margin-bottom: -56px;
+	}
+
+	.produto_icone {
+		padding: 41px 0px;
+	}
+
+	.produto_info p {
+		font-size: 14px;
+		line-height: 20px;
+		padding: 20px 30px;
+		height: 122px;
+	}
+
+	.produto_info ul li {
+		width: 181px;
+		height: 48px;
+	}
 }
 
 /* Estilo para SmartPhones */
@@ -84,7 +107,6 @@
 		display: none;
 	}
 
-
 	/* Sobre */
 	.missao_sobre p {
 		font-size: 14px;
@@ -92,8 +114,44 @@
 		padding-right: 0px;
 	}
 
-	.missao_sobre p ul li{
+	.missao_sobre p ul li {
 		font-size: 14px;
 		line-height: 25px;
 	}
+
+	/* Produtos */
+
+	.produtos_item h2 {
+		top: -100px;
+		margin-bottom: -68px;
+	}
+
+	.produto_icone {
+		padding: 41px 0px;
+	}
+
+	.produto_info p {
+		font-size: 14px;
+		line-height: 20px;
+		padding: 20px 30px;
+		height: auto;
+	}
+
+	.produto_info ul li {
+		width: 149px;
+		height: 48px;
+		font-size: 14px;
+		line-height: 20px;
+	}
+
+	.formulario_orcamento {
+		padding-right: 0px;
+	}
+
+	.orcamento_dados ul {
+		padding-right: 0px;
+	}
+	
+
+
 }
