--- a/css/style.css
+++ b/css/style.css
@@ -389,3 +389,37 @@ img {
     background-color: #fec63e;
     padding: 20px;
 }
+
+/* 5 Adicione o CSS Essencial abaixo */
+[data-slide] {
+    position: relative;
+  }
+  [data-slide] > * {
+    position: absolute;
+    top: 0px;
+    opacity: 0;
+  }
+  [data-slide] > .active {
+    position: relative;
+    opacity: 1;
+    transition: opacity 500ms;
+    z-index: 1;
+  }
+
+
+  [data-slide-nav] > button {
+    display: inline-block;
+    width: 12px;
+    height: 12px;
+    margin:4px;
+    border: none;
+    padding: 0;
+    border-radius: 6px;
+    text-indent: -99px;
+    overflow: hidden;
+    background: #1d1d1d;
+  }
+
+  [data-slide-nav] > button.active{
+    background: #fec63e;
+  }
